# Work-App-Database-Codex

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  GEMINI.md  LICENSE  README.md  README_CODEX_PIPELINE.md  audit-report-v2.md  audit-report.md  audit.toml  dep-audit-report.md  env-report.md  eslint.config.js  index.html  onboarding-report.md  package-lock.json  package.json  shipper-report.md  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.cargo/: audit.toml
.claude/: settings.local.json
.codex/: run-pipeline.sh
.codex/pipeline/: CODEX_AUDITOR.md  CODEX_CHANGELOG.md  CODEX_DEP_AUDITOR.md  CODEX_DOCS_WRITER.md  CODEX_ENV_VALIDATOR.md  CODEX_FIXER.md  CODEX_LICENSE.md  CODEX_ONBOARDING.md  CODEX_REFACTOR.md  CODEX_TEST_WRITER.md
.codex/reports/: 01-dependency-audit.md  02-license-audit.md  03-env-validation.md  04-code-audit.md  05-fix-report.md  06-test-report.md  07-refactor-report.md  08-docs-report.md  09-changelog-report.md  10-onboarding-report.md  2026-06-26_dependency-update-bug-sweep.md  CODEX_AUDITOR.md  backend-rust-major-deps-baseline.md  backend-rust-major-deps-compile-errors.md  backend-rust-major-deps-compile-errors.txt  backend-rust-major-deps-dry-run-before.txt  backend-rust-major-deps-tree-before.txt  backend-rust-major-deps-validation.md  backend-to-frontend-rust-major-deps-handoff.md  frontend-rust-major-deps-baseline.md  frontend-rust-major-deps-runtime-validation.md  frontend-rust-major-deps-tree-before.txt  frontend-rust-major-deps-usage-before.txt  rust-major-dependency-migration-final.md
.hermes/plans/: 2026-06-16_163522-admin-console-ssh-key-onboarding.md  2026-06-16_frontend-agent-report.md  2026-06-16_tunnel-key-requests.md  2026-06-22_100856-rust-major-dependency-migration.md  2026-06-26_143200-update-all-packages.md
crates/fleet-shared/: Cargo.toml
crates/fleet-shared/src/: lib.rs
docs/: INTERNAL_COMPLIANCE.md  OPERATIONS.md  ssh-tunnel-onboarding.md
scripts/: Fleet Tunnel Status.cmd  Start Fleet Tunnel.cmd  Stop Fleet Tunnel.cmd  fleet-tunnel.example.json  fleet-tunnel.ps1  install-openssh-client.nsh
server/: Cargo.toml  README.md
server/config/: server.example.toml  sshd-client-tunnel.example.conf  tunnel.example.conf
server/migrations/: 0001_server_schema.sql  0002_exact_currency.sql  0003_audit_log.sql  0004_webhooks.sql  0005_sites.sql  0006_tunnel_key_requests.sql  0007_tunnel_key_request_hardening.sql
server/packaging/: antminer-fleet-server.service  antminer-fleet-tunnel.service
server/packaging/debian/: control  postinst  prerm
server/scripts/: authorize-client-tunnel-key.sh  build-deb.sh  revoke-client-tunnel-key.sh  run-reverse-tunnel.sh
server/src/: api.rs  auth.rs  config.rs  import.rs  main.rs
server/tests/: config_cli.rs  tunnel_key_scripts.rs
src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_initial_schema.sql  0003_remove_ticketing.sql  0004_miner_import_fields.sql
src-tauri/src/: client.rs  db.rs  lib.rs  main.rs  models.rs  tunnel_onboarding.rs
src-tauri/src/commands/: dashboard.rs  miners.rs  mod.rs  parts.rs
src/components/layout/: AppShell.tsx
src/components/ui/: DataTable.tsx  Panel.tsx  StatusBadge.tsx
src/config/: server.ts
src/features/accounts/: AccountsView.tsx
src/features/audit/: AuditLogView.tsx  auditApi.ts
src/features/connection/: ConnectionGate.tsx  connectionApi.ts
src/features/dashboard/: DashboardView.tsx  dashboardApi.ts
src/features/inventory/: InventoryView.tsx  partApi.ts
src/features/miners/: MinersView.tsx  import.ts  minerApi.ts
src/features/settings/: SettingsView.tsx  TunnelKeyRequestsView.tsx  webhookApi.ts
src/features/sites/: SitesView.tsx  siteApi.ts
src/lib/: queryClient.ts  queryInvalidation.ts  tauri.ts
src/test/: ConnectionGate.test.tsx  DataTable.test.tsx  InventoryView.test.tsx  connectionApi.test.ts  dashboardApi.test.ts  fixtures.ts  import.test.ts  minerApi.test.ts  partApi.test.ts  serverConfig.test.ts  setup.ts
src/types/: db.ts
