[workspace]
members = ["crates/fleet-shared", "server", "src-tauri"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4"] }
