[package]
name = "antminer-fleet-manager"
version = "0.1.0"
description = "Offline Antminer repair and inventory manager"
authors = ["You"]
edition = "2021"

[lib]
name = "antminer_fleet_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
