[package]
name = "antminer-fleet-manager"
version = "0.3.0"
description = "Antminer fleet management desktop client"
authors = ["You"]
edition = "2021"

[lib]
name = "antminer_fleet_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
fleet-shared = { path = "../crates/fleet-shared" }
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
url = "2"
urlencoding = "2"
dirs = "6.0.0"
