[package]
name = "antminer-fleet-manager"
version.workspace = true
description = "Antminer fleet management desktop client"
authors = ["Edward Garcia"]
edition.workspace = true
license.workspace = true

[lib]
name = "antminer_fleet_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
fleet-shared = { path = "../crates/fleet-shared" }
keyring = { version = "4", features = ["windows-native-keyring-store", "apple-native-keyring-store", "zbus-secret-service-keyring-store"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
url = "2"
urlencoding = "2"
dirs = "6.0.0"
